--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           fetch-depth: 0
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
         working-directory: docs
 
       - name: Build website
